--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,39 @@
 :root {
-  --color-text:21243D;
+  --color-text-primary: #21243D;
+  --color-text-secondary: #636B78;
+  --color-view-all-link: #00A8CC;
 }
 
 body {
-  color: var(--color-text);
+  font-family: 'Inter', sans-serif;
+  color: var(--color-text-primary);
   font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
 }
 
 .link {
-  color: var(--color-text);
+  color: var(--color-text-primary);
   text-decoration: none;
 }
+
 .link:hover {
   text-decoration: underline;
 }
+
+.hero-title {
+  /* font-family: 'Heebo', sans-serif; */
+  font-style: italic;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 53px;
+}
+
 .hero-link {
   padding: 3px 28px;
   color: #FFFFFF;
+  font-weight: 600;
+  font-size: 40px;
   background-color: #FF6464;
   text-decoration: none;
   border-radius: 4px;
@@ -28,4 +45,39 @@ body {
 
 .hero-link:active{
   box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+.section-title {
+  font-weight: 600;
+    font-size: 24px;
+    line-height: 40px;
+}
+
+.view-all-link {
+  color: var(--color-view-all-link);
+  font-weight: 600;
+  line-height: 40px;
+  text-decoration: none;
+
+}
+
+.view-all-link:hover {
+  text-decoration: underline;
+}
+
+.post-title {
+   font-weight: 600;
+    font-size: 28px;
+    line-height: 1.5;
+}
+
+.post-date {
+    color: var(--color-text-secondary);
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.recent-post-section {
+    background: #EDF7FA;
+    border-radius: 0px;
 }
