--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,36 @@
   --color-view-all-link: #00a8cc;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding-left: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
+address {
+  font-style: normal;
+}
+
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
 body {
   font-family: "Inter", sans-serif;
   color: var(--color-text-primary);
@@ -12,20 +42,20 @@ body {
   line-height: 1.5;
 }
 
-.link {
+.navigation__list {
+  list-style: none;
+}
+
+.navigation__link {
   color: var(--color-text-primary);
   text-decoration: none;
 }
 
-.list {
-  list-style: none;
-}
-
-.link:hover {
+.navigation__link:hover {
   text-decoration: underline;
 }
 
-.hero-title {
+.hero__title {
   /* font-family: 'Heebo', sans-serif; */
   font-style: italic;
   font-weight: 700;
@@ -33,7 +63,7 @@ body {
   line-height: 53px;
 }
 
-.hero-link {
+.hero__link {
   padding: 3px 28px;
   color: #ffffff;
   font-weight: 600;
@@ -43,43 +73,43 @@ body {
   border-radius: 4px;
 }
 
-.hero-link:hover {
+.hero__link:hover {
   box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.2);
 }
 
-.hero-link:active {
+.hero__link:active {
   box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
 }
 
-.section-title {
+.post {
+  background: #edf7fa;
+}
+
+.post__title {
   font-weight: 600;
   font-size: 24px;
   line-height: 40px;
 }
 
-.view-all-link {
+.post__link {
   color: var(--color-view-all-link);
   font-weight: 600;
   line-height: 40px;
   text-decoration: none;
 }
 
-.view-all-link:hover {
+.post__link:hover {
   text-decoration: underline;
 }
 
-.post-title {
+.article__title {
   font-weight: 600;
   font-size: 28px;
   line-height: 1.5;
 }
 
-.post-date {
+.article__date {
   color: var(--color-text-secondary);
   font-weight: 500;
   font-size: 16px;
-}
-
-.recent-post-section {
-  background: #edf7fa;
-}
+}/*# sourceMappingURL=main.css.map */
