--- a/saas/layouts/_header.scss
+++ b/saas/layouts/_header.scss
@@ -1,3 +1,13 @@
+.header {
+  Width: 1440px; 
+  Padding: 0px 20px 0px 20px;
+}
+
+.header-container {
+  display: flex;
+  flex-direction:row;
+}
+
 .navigation__list {
   list-style: none;
 }
