--- a/saas/base/_common.scss
+++ b/saas/base/_common.scss
@@ -5,3 +5,18 @@ body {
   font-weight: 400;
   line-height: 1.5;
 }
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.link {
+  text-decoration: none;
+}
+
+// .section {
+//   padding-top: 60px;
+//   padding-bottom: 60px;
+// }
